[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/bowling_pin.png" type="Texture" id=1]
[ext_resource path="res://bowling_pin.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 62.0

[node name="BowlingPin" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 27 )
shape = SubResource( 1 )

[node name="LeftSide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSide"]
visible = false
position = Vector2( -7, -4 )
shape = SubResource( 2 )

[node name="RightSide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSide"]
visible = false
position = Vector2( 5, -4 )
shape = SubResource( 2 )

[node name="CenterRotateTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_BowlingPin_area_entered"]
[connection signal="area_entered" from="LeftSide" to="." method="_on_LeftSide_area_entered"]
[connection signal="area_entered" from="RightSide" to="." method="_on_RightSide_area_entered"]
[connection signal="timeout" from="CenterRotateTimer" to="." method="_on_CenterRotateTimer_timeout"]
